@@ -9,28 +9,30 @@ import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import net.minecraft.ChatFormatting;
-import net.minecraft.Util;
-import net.minecraft.commands.CommandSourceStack;
-import net.minecraft.commands.Commands;
-import net.minecraft.commands.SharedSuggestionProvider;
-import net.minecraft.commands.arguments.EntityArgument;
-import net.minecraft.commands.arguments.UuidArgument;
-import net.minecraft.network.chat.*;
-import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.server.players.PlayerList;
-import net.minecraft.world.entity.player.Player;
+import net.minecraft.command.CommandSource;
+import net.minecraft.command.Commands;
+import net.minecraft.command.ISuggestionProvider;
+import net.minecraft.command.arguments.EntityArgument;
+import net.minecraft.command.arguments.UUIDArgument;
+import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.entity.player.ServerPlayerEntity;
+import net.minecraft.server.management.PlayerList;
+import net.minecraft.util.Util;
+import net.minecraft.util.text.*;
+import net.minecraft.util.text.event.ClickEvent;
+import net.minecraft.util.text.event.HoverEvent;
 import net.minecraftforge.common.UsernameCache;
-import net.minecraftforge.server.ServerLifecycleHooks;
+import net.minecraftforge.fml.server.ServerLifecycleHooks;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 public class TPCommand {
 
     public static final Multimap<UUID, UUID> INVITATIONS = HashMultimap.create();
 
-    public static void register(CommandDispatcher<CommandSourceStack> dispatcher) {
+    public static void register(CommandDispatcher<CommandSource> dispatcher) {
         dispatcher.register(Commands.literal("team_projecte")
                 .then(Commands.literal("invite")
                         .requires(TPCommand::requiresPlayer)
@@ -52,12 +54,12 @@ public class TPCommand {
                                 .executes(TPCommand::kick)))
                 .then(Commands.literal("accept")
                         .requires(TPCommand::requiresPlayer)
-                        .then(Commands.argument("team", UuidArgument.uuid())
+                        .then(Commands.argument("team", UUIDArgument.uuid())
                                 .suggests(TPCommand::createSuggestionsForInvitation)
                                 .executes(TPCommand::accept)))
                 .then(Commands.literal("decline")
                         .requires(TPCommand::requiresPlayer)
-                        .then(Commands.argument("team", UuidArgument.uuid())
+                        .then(Commands.argument("team", UUIDArgument.uuid())
                                 .suggests(TPCommand::createSuggestionsForInvitation)
                                 .executes(TPCommand::decline)))
                 .then(Commands.literal("settings")
@@ -75,23 +77,25 @@ public class TPCommand {
     }
 
 
-    private static boolean requiresPlayer(CommandSourceStack stack) {
-        return stack.getEntity() instanceof ServerPlayer;
+    private static boolean requiresPlayer(CommandSource stack) {
+        return stack.getEntity() instanceof ServerPlayerEntity;
     }
 
 
-    private static boolean requiresInTeam(CommandSourceStack stack) {
-        if (stack.getEntity() instanceof ServerPlayer player) {
+    private static boolean requiresInTeam(CommandSource stack) {
+        if (stack.getEntity() instanceof ServerPlayerEntity) {
+            ServerPlayerEntity player = (ServerPlayerEntity) stack.getEntity();
             TPTeam team = TPTeam.getTeamByMember(TeamProjectE.getPlayerUUID(player));
             return team != null && (!team.getOwner().equals(TeamProjectE.getPlayerUUID(player)) || !team.getMembers().isEmpty());
         }
         return false;
     }
 
-    private static boolean requiresOwner(CommandSourceStack stack) {
+    private static boolean requiresOwner(CommandSource stack) {
         if (!requiresInTeam(stack))
             return false;
-        if (stack.getEntity() instanceof ServerPlayer player) {
+        if (stack.getEntity() instanceof ServerPlayerEntity) {
+            ServerPlayerEntity player = (ServerPlayerEntity) stack.getEntity();
             TPTeam team = TPTeam.getTeamByMember(TeamProjectE.getPlayerUUID(player));
             return team != null && TeamProjectE.getPlayerUUID(player).equals(team.getOwner());
         }
@@ -99,91 +103,91 @@ public class TPCommand {
     }
 
 
-    private static int transferOwnership(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int transferOwnership(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null || !checkOwner(team, player))
             return 0;
 
-        ServerPlayer newOwner = EntityArgument.getPlayer(context, "member");
+        ServerPlayerEntity newOwner = EntityArgument.getPlayer(context, "member");
         UUID newOwnerUUID = TeamProjectE.getPlayerUUID(newOwner);
 
         if (!team.getAll().contains(newOwnerUUID)) {
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.transfer_ownership.not_in_team"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.transfer_ownership.not_in_team"));
             return 0;
         }
         if (team.getOwner().equals(newOwnerUUID)) {
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.transfer_ownership.already_owner"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.transfer_ownership.already_owner"));
             return 0;
         }
 
         team.transferOwner(newOwnerUUID);
-        newOwner.sendMessage(new TranslatableComponent("commands.teamprojecte.transfer_ownership.new_owner").withStyle(ChatFormatting.GREEN), ChatType.SYSTEM, Util.NIL_UUID);
-        context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.transfer_ownership.success", newOwner.getName()), true);
+        newOwner.sendMessage(new TranslationTextComponent("commands.teamprojecte.transfer_ownership.new_owner").withStyle(TextFormatting.GREEN), ChatType.SYSTEM, Util.NIL_UUID);
+        context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.transfer_ownership.success", newOwner.getName()), true);
 
         return Command.SINGLE_SUCCESS;
     }
 
-    private static int kick(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int kick(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null || !checkOwner(team, player))
             return 0;
 
-        List<ServerPlayer> kick = EntityArgument.getPlayers(context, "members").stream()
+        List<ServerPlayerEntity> kick = EntityArgument.getPlayers(context, "members").stream()
                 .filter(p -> team.getMembers().contains(TeamProjectE.getPlayerUUID(p)))
-                .toList();
+                .collect(Collectors.toList());
         kick.forEach(p -> {
             team.removeMember(TeamProjectE.getPlayerUUID(p));
-            p.sendMessage(new TranslatableComponent("commands.teamprojecte.kicked").withStyle(ChatFormatting.RED), ChatType.SYSTEM, Util.NIL_UUID);
+            p.sendMessage(new TranslationTextComponent("commands.teamprojecte.kicked").withStyle(TextFormatting.RED), ChatType.SYSTEM, Util.NIL_UUID);
         });
 
         if (!kick.isEmpty())
-            context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.kick.success", kick.size()), true);
+            context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.kick.success", kick.size()), true);
         else
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.players_not_found"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.players_not_found"));
 
         return kick.size();
     }
 
-    private static int members(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int members(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null)
             return 0;
 
-        player.sendMessage(new TranslatableComponent("commands.teamprojecte.members", getNames(team.getOwner(), team.getAll())), ChatType.SYSTEM, Util.NIL_UUID);
+        player.sendMessage(new TranslationTextComponent("commands.teamprojecte.members", getNames(team.getOwner(), team.getAll())), ChatType.SYSTEM, Util.NIL_UUID);
         return Command.SINGLE_SUCCESS;
     }
 
-    private static Component getNames(UUID owner, List<UUID> uuids) {
-        List<Component> components = new ArrayList<>();
+    private static ITextComponent getNames(UUID owner, List<UUID> uuids) {
+        List<ITextComponent> components = new ArrayList<>();
         PlayerList playerList = ServerLifecycleHooks.getCurrentServer().getPlayerList();
 
         for (UUID uuid : uuids) {
-            MutableComponent component;
-            ServerPlayer player = playerList.getPlayer(uuid);
+            IFormattableTextComponent component;
+            ServerPlayerEntity player = playerList.getPlayer(uuid);
             if (player != null)
                 component = player.getName().copy()
-                        .withStyle(ChatFormatting.GREEN)
-                        .withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslatableComponent("commands.teamprojecte.members.member_online"))));
+                        .withStyle(TextFormatting.GREEN)
+                        .withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslationTextComponent("commands.teamprojecte.members.member_online"))));
             else if (UsernameCache.containsUUID(uuid))
-                component = new TextComponent(UsernameCache.getLastKnownUsername(uuid))
-                        .withStyle(ChatFormatting.RED)
-                        .withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslatableComponent("commands.teamprojecte.members.member_offline"))));
+                component = new StringTextComponent(UsernameCache.getLastKnownUsername(uuid))
+                        .withStyle(TextFormatting.RED)
+                        .withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslationTextComponent("commands.teamprojecte.members.member_offline"))));
             else
-                component = new TextComponent(uuid.toString())
-                        .withStyle(ChatFormatting.GRAY)
-                        .withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslatableComponent("commands.teamprojecte.members.member_unknown"))));
+                component = new StringTextComponent(uuid.toString())
+                        .withStyle(TextFormatting.GRAY)
+                        .withStyle(style -> style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new TranslationTextComponent("commands.teamprojecte.members.member_unknown"))));
             if (uuid.equals(owner))
-                component.withStyle(ChatFormatting.BOLD);
+                component.withStyle(TextFormatting.BOLD);
             components.add(component);
         }
-        return ComponentUtils.formatList(components, c -> c);
+        return TextComponentUtils.formatList(components, c -> c);
     }
 
-    private static int leave(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int leave(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null)
             return 0;
@@ -191,11 +195,11 @@ public class TPCommand {
         return Command.SINGLE_SUCCESS;
     }
 
-    private static int accept(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
-        UUID uuid = UuidArgument.getUuid(context, "team");
+    private static int accept(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
+        UUID uuid = UUIDArgument.getUuid(context, "team");
         if (!INVITATIONS.get(TeamProjectE.getPlayerUUID(player)).contains(uuid)) {
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.invitation.not_found"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.invitation.not_found"));
             return -1;
         }
 
@@ -203,7 +207,7 @@ public class TPCommand {
 
         TPTeam team = TPTeam.getTeam(uuid);
         if (team == null) {
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.team_not_found"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.team_not_found"));
             return -1;
         }
         TPTeam originalTeam = TPTeam.getTeamByMember(TeamProjectE.getPlayerUUID(player));
@@ -212,19 +216,19 @@ public class TPCommand {
         else
             team.addMember(TeamProjectE.getPlayerUUID(player));
 
-        context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.invite.accepted").withStyle(ChatFormatting.GREEN), false);
-        Component component = new TranslatableComponent("commands.teamprojecte.joined_team", player.getDisplayName()).withStyle(ChatFormatting.GREEN);
+        context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.invite.accepted").withStyle(TextFormatting.GREEN), false);
+        ITextComponent component = new TranslationTextComponent("commands.teamprojecte.joined_team", player.getDisplayName()).withStyle(TextFormatting.GREEN);
         TeamProjectE.getAllOnline(team.getAll()).forEach(p -> p.sendMessage(component, Util.NIL_UUID));
 
         return Command.SINGLE_SUCCESS;
     }
 
 
-    private static int decline(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
-        UUID uuid = UuidArgument.getUuid(context, "team");
+    private static int decline(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
+        UUID uuid = UUIDArgument.getUuid(context, "team");
         if (!INVITATIONS.get(TeamProjectE.getPlayerUUID(player)).contains(uuid)) {
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.invitation.not_found"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.invitation.not_found"));
             return -1;
         }
 
@@ -232,118 +236,118 @@ public class TPCommand {
 
         TPTeam team = TPTeam.getTeam(uuid);
         if (team == null) {
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.team_not_found"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.team_not_found"));
             return -1;
         }
 
-        player.sendMessage(new TranslatableComponent("commands.teamprojecte.invite.declined").withStyle(ChatFormatting.RED), ChatType.SYSTEM, Util.NIL_UUID);
+        player.sendMessage(new TranslationTextComponent("commands.teamprojecte.invite.declined").withStyle(TextFormatting.RED), ChatType.SYSTEM, Util.NIL_UUID);
         TeamProjectE.getAllOnline(Collections.singletonList(team.getOwner())).forEach(p ->
-                p.sendMessage(new TranslatableComponent("commands.teamprojecte.invitation.declined", player.getDisplayName()), Util.NIL_UUID));
+                p.sendMessage(new TranslationTextComponent("commands.teamprojecte.invitation.declined", player.getDisplayName()), Util.NIL_UUID));
 
         return Command.SINGLE_SUCCESS;
     }
 
-    private static CompletableFuture<Suggestions> createSuggestionsForInvitation(CommandContext<CommandSourceStack> context, SuggestionsBuilder builder) throws CommandSyntaxException {
-        Player player = checkPlayer(context);
-        return SharedSuggestionProvider.suggest(INVITATIONS.get(TeamProjectE.getPlayerUUID(player)).stream().map(UUID::toString), builder);
+    private static CompletableFuture<Suggestions> createSuggestionsForInvitation(CommandContext<CommandSource> context, SuggestionsBuilder builder) throws CommandSyntaxException {
+        PlayerEntity player = checkPlayer(context);
+        return ISuggestionProvider.suggest(INVITATIONS.get(TeamProjectE.getPlayerUUID(player)).stream().map(UUID::toString), builder);
     }
 
-    private static int invite(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        Player player = checkPlayer(context);
+    private static int invite(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        PlayerEntity player = checkPlayer(context);
         TPTeam team = TPTeam.getOrCreateTeam(TeamProjectE.getPlayerUUID(player));
 
 
-        Collection<ServerPlayer> players =
+        Collection<ServerPlayerEntity> players =
                 EntityArgument.getPlayers(context, "players").stream()
                         .filter(p -> !team.getAll().contains(TeamProjectE.getPlayerUUID(p)))
-                        .toList();
+                        .collect(Collectors.toList());
 
-        Component component = new TranslatableComponent("commands.teamprojecte.invitation",
+        ITextComponent component = new TranslationTextComponent("commands.teamprojecte.invitation",
                 player.getDisplayName(),
-                new TranslatableComponent("commands.teamprojecte.invite.option.accept")
-                        .withStyle(style -> style.applyFormat(ChatFormatting.GREEN)
+                new TranslationTextComponent("commands.teamprojecte.invite.option.accept")
+                        .withStyle(style -> style.applyFormat(TextFormatting.GREEN)
                                 .withClickEvent(new ClickEvent(ClickEvent.Action.RUN_COMMAND, "/team_projecte accept " + team.getUUID()))),
-                new TranslatableComponent("commands.teamprojecte.invite.option.decline")
-                        .withStyle(style -> style.applyFormat(ChatFormatting.RED)
+                new TranslationTextComponent("commands.teamprojecte.invite.option.decline")
+                        .withStyle(style -> style.applyFormat(TextFormatting.RED)
                                 .withClickEvent(new ClickEvent(ClickEvent.Action.RUN_COMMAND, "/team_projecte decline " + team.getUUID())))
         );
 
-        for (ServerPlayer p : players) {
+        for (ServerPlayerEntity p : players) {
             INVITATIONS.put(TeamProjectE.getPlayerUUID(p), team.getUUID());
             p.sendMessage(component, ChatType.SYSTEM, Util.NIL_UUID);
         }
-        if (players.size() > 0)
-            context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.invite.success", players.size()), true);
+        if (!players.isEmpty())
+            context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.invite.success", players.size()), true);
         else
-            context.getSource().sendFailure(new TranslatableComponent("commands.teamprojecte.players_not_found"));
+            context.getSource().sendFailure(new TranslationTextComponent("commands.teamprojecte.players_not_found"));
         return players.size();
     }
 
-    private static ServerPlayer checkPlayer(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        if (context.getSource().getEntity() instanceof ServerPlayer player)
-            return player;
-        throw CommandSourceStack.ERROR_NOT_PLAYER.create();
+    private static ServerPlayerEntity checkPlayer(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        if (context.getSource().getEntity() instanceof ServerPlayerEntity)
+            return (ServerPlayerEntity) context.getSource().getEntity();
+        throw CommandSource.ERROR_NOT_PLAYER.create();
     }
 
-    private static TPTeam checkInTeam(Player player) {
+    private static TPTeam checkInTeam(PlayerEntity player) {
         TPTeam team = TPTeam.getTeamByMember(TeamProjectE.getPlayerUUID(player));
         if (team == null || (team.getOwner().equals(TeamProjectE.getPlayerUUID(player)) && team.getMembers().isEmpty())) {
-            player.sendMessage(new TranslatableComponent("commands.teamprojecte.leave.not_in_team").withStyle(ChatFormatting.RED), Util.NIL_UUID);
+            player.sendMessage(new TranslationTextComponent("commands.teamprojecte.leave.not_in_team").withStyle(TextFormatting.RED), Util.NIL_UUID);
             return null;
         }
         return team;
     }
 
-    private static boolean checkOwner(TPTeam team, ServerPlayer player) {
+    private static boolean checkOwner(TPTeam team, ServerPlayerEntity player) {
         if (!TeamProjectE.getPlayerUUID(player).equals(team.getOwner())) {
-            player.sendMessage(new TranslatableComponent("commands.teamprojecte.not_owner").withStyle(ChatFormatting.RED), ChatType.SYSTEM, Util.NIL_UUID);
+            player.sendMessage(new TranslationTextComponent("commands.teamprojecte.not_owner").withStyle(TextFormatting.RED), ChatType.SYSTEM, Util.NIL_UUID);
             return false;
         }
         return true;
     }
 
-    private static int queryShareEMC(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int queryShareEMC(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null)
             return 0;
 
-        context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.settings.query.sharing_emc." + team.isSharingEMC()), true);
+        context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.settings.query.sharing_emc." + team.isSharingEMC()), true);
 
         return Command.SINGLE_SUCCESS;
     }
 
-    private static int setShareEMC(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int setShareEMC(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null || !checkOwner(team, player))
             return 0;
 
         team.setShareEMC(BoolArgumentType.getBool(context, "value"));
-        context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.settings.set.sharing_emc." + team.isSharingEMC()), true);
+        context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.settings.set.sharing_emc." + team.isSharingEMC()), true);
 
         return Command.SINGLE_SUCCESS;
     }
 
-    private static int queryShareKnowledge(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int queryShareKnowledge(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null)
             return 0;
 
-        context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.settings.query.sharing_knowledge." + team.isSharingKnowledge()), true);
+        context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.settings.query.sharing_knowledge." + team.isSharingKnowledge()), true);
 
         return Command.SINGLE_SUCCESS;
     }
 
-    private static int setShareKnowledge(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        ServerPlayer player = checkPlayer(context);
+    private static int setShareKnowledge(CommandContext<CommandSource> context) throws CommandSyntaxException {
+        ServerPlayerEntity player = checkPlayer(context);
         TPTeam team = checkInTeam(player);
         if (team == null || !checkOwner(team, player))
             return 0;
 
         team.setShareKnowledge(BoolArgumentType.getBool(context, "value"));
-        context.getSource().sendSuccess(new TranslatableComponent("commands.teamprojecte.settings.set.sharing_knowledge." + team.isSharingKnowledge()), true);
+        context.getSource().sendSuccess(new TranslationTextComponent("commands.teamprojecte.settings.set.sharing_knowledge." + team.isSharingKnowledge()), true);
 
         return Command.SINGLE_SUCCESS;
     }
